update css part 2
update css untuk setiap page

--- a/src/App.css
+++ b/src/App.css
@@ -13,22 +13,22 @@ body {
   width: 100%;
   margin: 0 auto;
 }
-
 .news {
   width: 90%;
   margin: 50px auto;
+  padding-top: 50px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 20px;
 }
 
 
-.all-news {
+/* .all-news {
   max-width: 500px;
   padding: 30px;
   border: 1px solid lightgray;
   border-radius: 5px;
-}
+}  */
 
 .news__title {
   padding-bottom: 10px;
